Added Matt's Desc and improved performance

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,20 +1,20 @@
 {{#section 'head'}}
 <!-- Owl carousel -->
-<link rel="stylesheet" href="libs/owl/dist/assets/owl.carousel.min.css" />
-<link rel="stylesheet" href="libs/owl/dist/assets/owl.theme.default.min.css" />
-<script src="libs/owl/dist/owl.carousel.min.js"></script>
+<link rel="stylesheet" href="libs/owl/dist/assets/owl.carousel.min.css" media="none" onload="if(media!='all')media='all'" />
+<link rel="stylesheet" href="libs/owl/dist/assets/owl.theme.default.min.css" media="none" onload="if(media!='all')media='all'" />
+<script src="libs/owl/dist/owl.carousel.min.js" defer></script>
 
 <!-- AOS (Scroll Animation) -->
-<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-<script src="libs/scroll-animate/scroll-config.js"></script>
+<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" media="none" onload="if(media!='all')media='all'"/>
+<script src="https://unpkg.com/aos@next/dist/aos.js" defer></script>
+<script src="libs/scroll-animate/scroll-config.js" defer></script>
 
 <!-- SweetAlert -->
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9" defer></script>
 
 <!-- Page JS -->
-<script src="js/carousel.js"></script>
-<script src="js/email.js"></script>
+<script src="js/carousel.js" defer></script>
+<script src="js/email.js" defer></script>
 
 <!-- Page Styles -->
 <link rel="stylesheet" href="css/fixed.css" />
@@ -224,7 +224,7 @@
           </div>
           <div class="card-body">
             <h5 class="card-title">Dead Instinct</h5>
-            <p class="card-text">A short description of the application which is great. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
+            <p class="card-text">Dead Instinct is an endless runner that challenges the player to survive with only their athletic ability and wits to stay alive. Start running today and beat your high score! Available on both iOS & Android</p>
             <div class="card-button-container d-flex justify-content-between">
               <a href="/products#game-row-one" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
               <div class="d-flex store-buttons align-items-center">
@@ -242,7 +242,7 @@
           </div>
           <div class="card-body">
             <h5 class="card-title">Dead Instinct</h5>
-            <p class="card-text">A short description of the application which is great. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
+            <p class="card-text">Dead Instinct is an endless runner that challenges the player to survive with only their athletic ability and wits to stay alive. Start running today and beat your high score! Available on both iOS & Android</p>
             <div class="card-button-container d-flex justify-content-between">
               <a href="/products#game-row-one" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
               <div class="d-flex store-buttons align-items-center">
@@ -260,7 +260,7 @@
           </div>
           <div class="card-body">
             <h5 class="card-title">Dead Instinct</h5>
-            <p class="card-text">A short description of the application which is great. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
+            <p class="card-text">Dead Instinct is an endless runner that challenges the player to survive with only their athletic ability and wits to stay alive. Start running today and beat your high score! Available on both iOS & Android</p>
             <div class="card-button-container d-flex justify-content-between">
               <a href="/products#game-row-one" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
               <div class="d-flex store-buttons align-items-center">
@@ -278,7 +278,7 @@
           </div>
           <div class="card-body">
             <h5 class="card-title">Dead Instinct</h5>
-            <p class="card-text">A short description of the application which is great. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
+            <p class="card-text">Dead Instinct is an endless runner that challenges the player to survive with only their athletic ability and wits to stay alive. Start running today and beat your high score! Available on both iOS & Android</p>
            
             <div class="card-button-container d-flex justify-content-between">
               <a href="/products#game-row-one" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
