--- a/views/products.hbs
+++ b/views/products.hbs
@@ -1,9 +1,9 @@
 {{#section 'head'}}
   <link rel="stylesheet" href="css/products.css" />
-  <script src="js/expandables.js"></script>
-  <script src="libs/modal-video/jquery-modal-video.min.js"></script>
-  <link rel="stylesheet" href="libs/modal-video/modal-video.min.css" />
-  <script src="js/products.js"></script>
+  <script src="js/expandables.js" defer></script>
+  <script src="libs/modal-video/jquery-modal-video.min.js" defer></script>
+  <link rel="stylesheet" href="libs/modal-video/modal-video.min.css" media="none" onload="if(media!='all')media='all'" />
+  <script src="js/products.js" defer></script>
 {{/section}}
 
 <!-- Heading and details -->
@@ -14,8 +14,9 @@
       <div class="col-lg-6">
         <h1 class="display-5 text-center font-weight-light text-capitalize">Our Products</h1>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lorem velit, varius sit amet suscipit a, dignissim a metus. 
-          Integer at lorem id justo mollis posuere. Curabitur porttitor eget metus a tincidunt. Vivamus et pharetra ligula. 
+          Ranging from arcade games to education applications, 
+          we aim to transform how people learn and develop themselves in different
+          areas.
         </p>
       </div>
     </div>
@@ -114,10 +115,7 @@
               <div class="col-lg-8">
                 <div class="product-description mt-4 mt-lg-0">
                   <p>
-                    Dead Instinct is an action-packed zombie endless runner game! Keep running away from the zombies before they catch you! plz get game thx.
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sodales metus mattis, pulvinar dolor id, tincidunt odio. 
-                    Donec maximus egestas mauris eget fringilla. In volutpat nunc vitae auctor hendrerit. Maecenas aliquet nunc quis laoreet commodo. 
-                    Integer sollicitudin enim vitae lectus suscipit, gravida condimentum elit euismod. Curabitur porttitor nisl sed tincidunt mattis. 
+                    Dead Instinct is here to develop your mental chronometry skills! Set in a world where a scientific experiment on gene manipulation had gone seriously wrong, everyone is now vulnerable to being mutated by this life-threatening airborne disease. This endless runner will challenge you to survive or infect others. Are you fast enough to escape? Start running today and find out! 
                     <div class="store-buttons-container text-lg-left text-center">
                       <a href="#" target="_blank" class="read-more-btn btn btn-md moon-btn-dark btn-outline-dark">
                         <i class="apple-store store-icon fab fa-apple fa-fw"></i>
