--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,9 +1,9 @@
 {{#section 'head'}}
 
 <!-- AOS (Scroll Animation) -->
-<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-<script src="libs/scroll-animate/scroll-config.js"></script>
+<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" media="none" onload="if(media!='all')media='all'" />
+<script src="https://unpkg.com/aos@next/dist/aos.js" defer></script>
+<script src="libs/scroll-animate/scroll-config.js" defer></script>
 
 <!-- Page CSS -->
 <link rel="stylesheet" href="css/about.css" />
@@ -19,8 +19,9 @@
         <div class="about-text-container">
           <h1>About Us</h1>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lorem velit, varius sit amet suscipit a, dignissim a metus. Integer at lorem id justo mollis posuere. Curabitur porttitor eget metus a tincidunt. Vivamus et pharetra ligula. Nulla sapien quam, vehicula vel enim in, malesuada dignissim risus. Proin mauris velit, aliquam ac pulvinar ut, viverra vel ex. Sed bibendum ornare ante, eu aliquet tellus tempor a. Vivamus non ligula sit amet dui mollis congue a id augue. Integer facilisis posuere eros, sed semper massa posuere pharetra. Sed quam augue, ultricies id laoreet in, porta a libero. Morbi turpis urna, ornare aliquam vehicula pellentesque, vehicula quis orci. 
-            Nullam accumsan lorem et sodales fringilla. Donec quis elementum nulla. Curabitur sed aliquam lacus. Sed ac volutpat risus. Donec eget eros in nisi sodales rhoncus. In hac habitasse platea dictumst. Aenean eu ipsum vehicula, malesuada libero porttitor, blandit tellus. Fusce dictum magna nulla, vulputate porttitor nibh fermentum at. Sed in lacinia lacus. Fusce commodo suscipit nisl.
+            What started as a casual conversation between two students during a boring lecture, ignited the passion for beginning an adventure that will see them transform into a multi-disciplinary team with a focus on developing products that are enjoyable and impacts our community. 
+            Dreamlink Studio is a software development start-up with an emphasis on transforming dreams into reality. We have a strong belief that with the increased need for students of all ages to carry out independent learning, it is vital to provide the right tools to set them up for success. Gone are the days of reading textbooks and memorising theories; now is the time for us to take control of how we learn. Whether it be creating the next application or planning our next move, our imaginations will drive us to our next innovation and milestone. 
+            Our journey has just begun. 
           </p>
         </div>
       </div>
@@ -106,20 +107,22 @@
       </div>
     </div>
 
+
+
     <div class="profile-row d-inline-flex row my-4" data-aos="fade-right" data-aos-once="true" data-aos-mirror="false">
       <div class="d-flex col-lg-2 align-items-center justify-content-center">
         <!-- 210 x 235 (ie: width*1.12 ratio)-->
         <figure class="img-container text-lg-left text-center my-0">
-          <img src="images/team/about-profiles/mark.jpg" class="profile-image img-fluid" alt="John Doe Profile Image" />
+          <img src="images/team/about-profiles/mark.jpg" class="profile-image img-fluid" alt="Matthew SzeHao Ong's Profile Image" loading="lazy"/>
           <figcaption class="socials">
-            <a href="#"><i class="icon fab fa-linkedin"></i></a>
+            <a href="#" target="_blank" title="Click to view Matthew's Linkedin profile"><i class="icon fab fa-linkedin"></i></a>
           </figcaption>
         </figure>
       </div>
       <div class="col-lg-10 mt-4 mt-lg-0">
-        <h4 class="capitalize">Mark Donald</h4>
+        <h4 class="capitalize">Matthew SzeHao Ong</h4>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lorem velit, varius sit amet suscipit a, dignissim a metus. Integer at lorem id justo mollis posuere. Curabitur porttitor eget metus a tincidunt. Vivamus et pharetra ligula. Nulla sapien quam, vehicula vel enim in, malesuada dignissim risus. Proin mauris velit, aliquam ac pulvinar ut, viverra vel ex. Sed bibendum ornare ante, eu aliquet tellus tempor a. Vivamus non ligula sit amet dui mollis congue a id augue. Integer facilisis posuere eros, sed semper massa posuere pharetra. Sed quam augue, ultricies id laoreet in, porta a libero. Morbi turpis urna, ornare aliquam vehicula pellentesque, vehicula quis orcin.
+          Matthew has experience as an analyst in the credit industry, specialising in automation & data-driven areas. He has a background in business technology and software development and is a serial entrepreneur. At Dreamlink Studio, Matthew focuses on ensuring that our teams strive to operate at the highest possible levels of efficiency while ensuring that we stay within our project constraints. He passionately believes in creating an environment for his team to develop innovative products that will be enjoyed and have an impact on the community.
         </p>
       </div>
     </div>
