--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -4,10 +4,10 @@
 <link rel="stylesheet" href="css/contact.css" />
 
 <!-- SweetAlert -->
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9" defer></script>
 
 <!-- Page JS -->
-<script src="js/email.js"></script>
+<script src="js/email.js" defer></script>
 
 {{/section}}
 
