Images & desc 4 Justine HW & Sum + accessibility

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -119,7 +119,7 @@
           </figcaption>
         </figure>
       </div>
-      <div class="col-lg-10 mt-4 mt-lg-0">
+      <div class="col-lg-10 mt-4 mt-lg-0" id="matthew-szehao-ong">
         <h4 class="capitalize">Matthew SzeHao Ong</h4>
         <p>
           Matthew has experience as an analyst in the credit industry, specialising in automation & data-driven areas. He has a background in business technology and software development and is a serial entrepreneur. At Dreamlink Studio, Matthew focuses on ensuring that our teams strive to operate at the highest possible levels of efficiency while ensuring that we stay within our project constraints. He passionately believes in creating an environment for his team to develop innovative products that will be enjoyed and have an impact on the community.
@@ -130,34 +130,46 @@
     <div class="profile-row d-inline-flex row my-4 text-lg-right text-left flex-row-reverse" data-aos="fade-left" data-aos-once="true" data-aos-mirror="false">
       <div class="d-flex col-lg-2 align-items-center justify-content-center">
         <figure class="img-container text-lg-left text-center my-0">
-          <img src="images/team/about-profiles/mark.jpg" class="profile-image img-fluid" alt="John Doe Profile Image" />
+          <img src="images/team/about-profiles/justine_chen.jpg" class="profile-image img-fluid" alt="Justine Chen's Profile Image" />
           <figcaption class="socials">
-            <a href="#"><i class="icon fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/justine-chen-140803182/" target="_blank" title="Click to view Justine's Linkedin profile">
+              <i class="icon fab fa-linkedin"></i>
+            </a>
           </figcaption>
         </figure>
       </div>
-      <div class="col-lg-10 mt-4 mt-lg-0">
-        <h4 class="capitalize">Mark Donald</h4>
+      
+
+      <div class="col-lg-10 mt-4 mt-lg-0" id="justine_chen">
+        <h4 class="capitalize">Justine Chen</h4>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lorem velit, varius sit amet suscipit a, dignissim a metus. Integer at lorem id justo mollis posuere. Curabitur porttitor eget metus a tincidunt. Vivamus et pharetra ligula. Nulla sapien quam, vehicula vel enim in, malesuada dignissim risus. Proin mauris velit, aliquam ac pulvinar ut, viverra vel ex. Sed bibendum ornare ante, eu aliquet tellus tempor a. Vivamus non ligula sit amet dui mollis congue a id augue. Integer facilisis posuere eros, sed semper massa posuere pharetra. Sed quam augue, ultricies id laoreet in, porta a libero. Morbi turpis urna, ornare aliquam vehicula pellentesque, vehicula quis orcin.
+          Part of the UI & graphics team at Dreamlink. 
+          Currently a student and this is her first project in UI & graphics design; wants to start a career in UI/UX design. 
+          Also has the cutest puppy which is secretly the 9th member of the team.
         </p>
       </div>
     </div>
+
+  
 
     <div class="profile-row d-inline-flex row my-4" data-aos="fade-right" data-aos-once="true" data-aos-mirror="false">
       <div class="d-flex col-lg-2 align-items-center justify-content-center">
         <!-- 210 x 235 (ie: width*1.12 ratio)-->
         <figure class="img-container text-lg-left text-center my-0">
-          <img src="images/team/about-profiles/mark.jpg" class="profile-image img-fluid" alt="John Doe Profile Image" />
+          <img src="images/team/about-profiles/summer_chong.jpg" class="profile-image img-fluid" alt="Summer Chong's Profile Image" />
           <figcaption class="socials">
-            <a href="#"><i class="icon fab fa-linkedin"></i></a>
+            <a href="http://www.linkedin.com/in/summer-soktengchong" target="_blank" title="Click to view Summer's Linkedin profile">
+              <i class="icon fab fa-linkedin"></i>
+            </a>
           </figcaption>
         </figure>
       </div>
-      <div class="col-lg-10 mt-4 mt-lg-0">
-        <h4 class="capitalize">Mark Donald</h4>
+      <div class="col-lg-10 mt-4 mt-lg-0" id="summer_chong">
+        <h4 class="capitalize">Summer Chong</h4>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lorem velit, varius sit amet suscipit a, dignissim a metus. Integer at lorem id justo mollis posuere. Curabitur porttitor eget metus a tincidunt. Vivamus et pharetra ligula. Nulla sapien quam, vehicula vel enim in, malesuada dignissim risus. Proin mauris velit, aliquam ac pulvinar ut, viverra vel ex. Sed bibendum ornare ante, eu aliquet tellus tempor a. Vivamus non ligula sit amet dui mollis congue a id augue. Integer facilisis posuere eros, sed semper massa posuere pharetra. Sed quam augue, ultricies id laoreet in, porta a libero. Morbi turpis urna, ornare aliquam vehicula pellentesque, vehicula quis orcin.
+          Team lead of graphic team, allocating works and task to member of the graphic team. She discovered she passion for graphic after those long nights she pulled for doing graphic assignments during university although her role as a team lead question her creativity level, but she believes in her team that they will always pull through. 
+          She also told HW (Hui Wen) to be confident that we will stay as a team (communication to the max).
+          The only thing she likes to do when she is free is looking for good treats (especially the sweet kind). 
         </p>
       </div>
     </div>
@@ -165,16 +177,20 @@
     <div class="profile-row d-inline-flex row my-4 text-lg-right text-left flex-row-reverse" data-aos="fade-left" data-aos-once="true" data-aos-mirror="false">
       <div class="d-flex col-lg-2 align-items-center justify-content-center">
         <figure class="img-container text-lg-left text-center my-0">
-          <img src="images/team/about-profiles/mark.jpg" class="profile-image img-fluid" alt="John Doe Profile Image" />
+          <img src="images/team/about-profiles/hui_wen_poh.jpg" class="profile-image img-fluid" alt="Hui Wen Poh's Profile Image" />
           <figcaption class="socials">
-            <a href="#"><i class="icon fab fa-linkedin"></i></a>
+            <a href="http://linkedin.com/in/hui-wen-poh-6bb48714b" target="_blank" title="Click to view HW's Linkedin profile">
+              <i class="icon fab fa-linkedin"></i>
+            </a>
           </figcaption>
         </figure>
       </div>
-      <div class="col-lg-10 mt-4 mt-lg-0">
-        <h4 class="capitalize">Mark Donald</h4>
+      <div class="col-lg-10 mt-4 mt-lg-0" id="hui_wen_poh">
+        <h4 class="capitalize">Hui Wen Poh (HW)</h4>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lorem velit, varius sit amet suscipit a, dignissim a metus. Integer at lorem id justo mollis posuere. Curabitur porttitor eget metus a tincidunt. Vivamus et pharetra ligula. Nulla sapien quam, vehicula vel enim in, malesuada dignissim risus. Proin mauris velit, aliquam ac pulvinar ut, viverra vel ex. Sed bibendum ornare ante, eu aliquet tellus tempor a. Vivamus non ligula sit amet dui mollis congue a id augue. Integer facilisis posuere eros, sed semper massa posuere pharetra. Sed quam augue, ultricies id laoreet in, porta a libero. Morbi turpis urna, ornare aliquam vehicula pellentesque, vehicula quis orcin.
+          Part of finance and graphics team. She is not into aesthetics but she ended up in graphics. Don't ask here how because she doesn't know herself.
+          HW is a very fresh graduate with innocent mind with no impurities. Recruited by a mastermind and dang... Everything goes haywire. Nah... She's still innocent. Anyway, we will continue our dream into the unknown journey as a team... Summer said to be confident that we will stay as a team. So yes, we will and we can. 
+          If we fall, fall hard else don’t fall.
         </p>
       </div>
     </div>
