--- a/views/index.hbs
+++ b/views/index.hbs
@@ -155,55 +155,55 @@
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
             <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" loading="lazy" />
-            <h4>John Doe</h4>
-            <p>Developer</p>
+            <h4>Matthew Ong</h4>
+            <p>Team Lead</p>
           </div>
           <div class="flip-card-back">
-            <h1>John Doe</h1>
-            <p>Game Developer and Designer</p>
-            <button class="btn btn-md btn-outline-light">View More</button>
+            <h1>Matthew</h1>
+            <p>Core Team Leader</p>
+            <a href="/about#matthew-szehao-ong" class="btn btn-md btn-outline-light">Learn More</a>
           </div>
         </div>
       </div>
       <div class="item flip-card" data-aos="zoom-in-up" data-aos-delay="1100" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
-            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" loading="lazy" />
-            <h4>John Doe</h4>
-            <p>Developer</p>
+            <img src="images/team/index-profiles/justine_chen.jpg" class="circle-img" alt="Justine Chen" loading="lazy" />
+            <h4>Justine Chen</h4>
+            <p>Lead UI/UX</p>
           </div>
           <div class="flip-card-back">
-            <h1>John Doe</h1>
-            <p>Game Developer and Designer</p>
-            <button class="btn btn-md btn-outline-light">View More</button>
+            <h1>Justine</h1>
+            <p>UI/UX & Graphics</p>
+            <a href="/about#justine_chen" class="btn btn-md btn-outline-light">Learn More</a>
           </div>
         </div>
       </div>
       <div class="item flip-card" data-aos="zoom-in-up" data-aos-delay="1300" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
-            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" loading="lazy" />
-            <h4>John Doe</h4>
-            <p>Developer</p>
+            <img src="images/team/index-profiles/summer_chong.jpg" class="circle-img" alt="Summer Chong" loading="lazy" />
+            <h4>Summer Chong</h4>
+            <p>Lead Graphics</p>
           </div>
           <div class="flip-card-back">
-            <h1>John Doe</h1>
-            <p>Game Developer and Designer</p>
-            <button class="btn btn-md btn-outline-light">View More</button>
+            <h1>Summer</h1>
+            <p>Graphics</p> 
+            <a href="/about#summer_chong" class="btn btn-md btn-outline-light">Learn More</a>
           </div>
         </div>
       </div>
       <div class="item flip-card" data-aos="zoom-in-up" data-aos-delay="1500" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
-            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" loading="lazy" />
-            <h4>John Doe</h4>
-            <p>Developer</p>
+            <img src="images/team/index-profiles/hui_wen_poh.jpg" class="circle-img" alt="Hui Wen Poh" loading="lazy" />
+            <h4>Hui Wen Poh</h4>
+            <p>Graphics</p>
           </div>
           <div class="flip-card-back">
-            <h1>John Doe</h1>
-            <p>Game Developer and Designer</p>
-            <button class="btn btn-md btn-outline-light">View More</button>
+            <h1>HW</h1>
+            <p>Graphics and Finance</p>
+            <a href="/about#hui_wen_poh" class="btn btn-md btn-outline-light">Learn More</a>
           </div>
         </div>
       </div>
@@ -226,10 +226,10 @@
             <h5 class="card-title">Dead Instinct</h5>
             <p class="card-text">Dead Instinct is an endless runner that challenges the player to survive with only their athletic ability and wits to stay alive. Start running today and beat your high score! Available on both iOS & Android</p>
             <div class="card-button-container d-flex justify-content-between">
-              <a href="/products#game-row-one" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
+              <a href="/products#game-row-one" class="read-more-btn btn btn-md moon-btn btn-outline-dark">View App</a>
               <div class="d-flex store-buttons align-items-center">
-                <a class="d-flex align-items-center align-self-center mr-2" href="#"><i class="apple-store store-icon fab fa-apple fa-fw"></i></a>
-                <a class="d-flex align-items-center align-self-center" href="#"><i class="android-store store-icon fab fa-google-play fa-fw"></i></a>
+                <a class="d-flex align-items-center align-self-center mr-2" aria-label="Apple Store Icon Link" href="#"><i class="apple-store store-icon fab fa-apple fa-fw"></i></a>
+                <a class="d-flex align-items-center align-self-center" aria-label="Android Store Icon Link" href="#"><i class="android-store store-icon fab fa-google-play fa-fw"></i></a>
               </div>
             </div>
           </div>
@@ -244,10 +244,10 @@
             <h5 class="card-title">Dead Instinct</h5>
             <p class="card-text">Dead Instinct is an endless runner that challenges the player to survive with only their athletic ability and wits to stay alive. Start running today and beat your high score! Available on both iOS & Android</p>
             <div class="card-button-container d-flex justify-content-between">
-              <a href="/products#game-row-one" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
+              <a href="/products#game-row-one" class="read-more-btn btn btn-md moon-btn btn-outline-dark">View App</a>
               <div class="d-flex store-buttons align-items-center">
-                <a class="d-flex align-items-center align-self-center mr-2" href="#"><i class="apple-store store-icon fab fa-apple fa-fw"></i></i></a>
-                <a class="d-flex align-items-center align-self-center" href="#"><i class="android-store store-icon fab fa-google-play fa-fw"></i></a>
+                <a class="d-flex align-items-center align-self-center mr-2" aria-label="Apple Store Icon Link" href="#"><i class="apple-store store-icon fab fa-apple fa-fw"></i></i></a>
+                <a class="d-flex align-items-center align-self-center" aria-label="Android Store Icon Link" href="#"><i class="android-store store-icon fab fa-google-play fa-fw"></i></a>
               </div>
             </div>
           </div>
@@ -262,10 +262,10 @@
             <h5 class="card-title">Dead Instinct</h5>
             <p class="card-text">Dead Instinct is an endless runner that challenges the player to survive with only their athletic ability and wits to stay alive. Start running today and beat your high score! Available on both iOS & Android</p>
             <div class="card-button-container d-flex justify-content-between">
-              <a href="/products#game-row-one" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
+              <a href="/products#game-row-one" class="read-more-btn btn btn-md moon-btn btn-outline-dark">View App</a>
               <div class="d-flex store-buttons align-items-center">
-                <a class="d-flex align-items-center align-self-center mr-2" href="#"><i class="apple-store store-icon fab fa-apple fa-fw"></i></i></a>
-                <a class="d-flex align-items-center align-self-center" href="#"><i class="android-store store-icon fab fa-google-play fa-fw"></i></a>
+                <a class="d-flex align-items-center align-self-center mr-2" aria-label="Apple Store Icon Link" href="#"><i class="apple-store store-icon fab fa-apple fa-fw"></i></i></a>
+                <a class="d-flex align-items-center align-self-center" aria-label="Android Store Icon Link" href="#"><i class="android-store store-icon fab fa-google-play fa-fw"></i></a>
               </div>
             </div>
           </div>
@@ -281,10 +281,10 @@
             <p class="card-text">Dead Instinct is an endless runner that challenges the player to survive with only their athletic ability and wits to stay alive. Start running today and beat your high score! Available on both iOS & Android</p>
            
             <div class="card-button-container d-flex justify-content-between">
-              <a href="/products#game-row-one" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
+              <a href="/products#game-row-one" class="read-more-btn btn btn-md moon-btn btn-outline-dark">View App</a>
               <div class="d-flex store-buttons align-items-center">
-                <a class="d-flex align-items-center align-self-center mr-2" href="#"><i class="apple-store store-icon fab fa-apple fa-fw"></i></i></a>
-                <a class="d-flex align-items-center align-self-center" href="#"><i class="android-store store-icon fab fa-google-play fa-fw"></i></a>
+                <a class="d-flex align-items-center align-self-center mr-2" aria-label="Apple Store Icon Link" href="#"><i class="apple-store store-icon fab fa-apple fa-fw"></i></i></a>
+                <a class="d-flex align-items-center align-self-center" aria-label="Android Store Icon Link" href="#"><i class="android-store store-icon fab fa-google-play fa-fw"></i></a>
               </div>
             </div>
           </div>
