--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -57,7 +57,7 @@
 </head>
 <body>
   <div class="scroll-top" id="scroll-top">
-    <button class="scroll-top-btn" data-scroll="true" data-to="body" data-toggle="tooltip" data-placement="top" title="Back to Top">
+    <button class="scroll-top-btn" aria-label="Scroll to Top Button" data-scroll="true" data-to="body" data-toggle="tooltip" data-placement="top" title="Back to Top">
       <div class="circle-icon">
         <i class="icon fas fa-chevron-up fa-fw"></i>
       </div>
@@ -72,7 +72,7 @@
           <a class="navbar-brand" href="/">
             <img src="images/logo-sm.png" id="logo" alt="Dreamlink Studio Logo" />
           </a>
-          <button type="button" class="navbar-toggler outline-none" data-toggle="collapse" data-target="#navbarSupportedContent">
+          <button type="button" class="navbar-toggler outline-none" aria-label="Navbar hamburger toggle button" data-toggle="collapse" data-target="#navbarSupportedContent">
             <i class="text-dark fas fa-bars"></i>
           </button>
 
