Updated Justine's description

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -40,7 +40,7 @@
         <figure class="img-container text-lg-left text-center my-0">
           <img src="images/team/about-profiles/harrison_verrios.jpg" class="profile-image img-fluid" alt="Harrison Verrios's Profile Image" loading="lazy" />
           <figcaption class="socials">
-            <a href="https://www.linkedin.com/in/harrison-verrios/" target="_blank" title="Click to view Harrison's Linkedin profile"><i class="icon fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/harrison-verrios/" rel="noopener" target="_blank" title="Click to view Harrison's Linkedin profile"><i class="icon fab fa-linkedin"></i></a>
           </figcaption>
         </figure>
       </div>
@@ -57,7 +57,7 @@
         <figure class="img-container text-lg-left text-center my-0">
           <img src="images/team/about-profiles/jeffrey_goh.jpg" class="profile-image img-fluid" alt="Jeffrey Goh's Profile Image" loading="lazy"/>
           <figcaption class="socials">
-            <a href="https://www.linkedin.com/in/jeffrey-goh-20479770/" target="_blank" title="Click to view Jeffrey's Linkedin profile"><i class="icon fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/jeffrey-goh-20479770/" rel="noopener" target="_blank" title="Click to view Jeffrey's Linkedin profile"><i class="icon fab fa-linkedin"></i></a>
           </figcaption>
         </figure>
       </div>
@@ -78,7 +78,7 @@
         <figure class="img-container text-lg-left text-center my-0">
           <img src="images/team/about-profiles/nicholas_parsons.jpg" class="profile-image img-fluid" alt="Nicholas Parsons's Profile Image" loading="lazy" />
           <figcaption class="socials">
-            <a href="https://www.linkedin.com/in/nick-parsons-ba006516b/" target="_blank" title="Click to view Nick's Linkedin profile"><i class="icon fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/nick-parsons-ba006516b/" rel="noopener" target="_blank" title="Click to view Nick's Linkedin profile"><i class="icon fab fa-linkedin"></i></a>
           </figcaption>
         </figure>
       </div>
@@ -95,7 +95,7 @@
         <figure class="img-container text-lg-left text-center my-0">
           <img src="images/team/about-profiles/wilbert_soetanto.jpg" class="profile-image img-fluid" alt="Wilbert Soetanto Profile Image" loading="lazy" />
           <figcaption class="socials">
-            <a href="https://www.linkedin.com/in/wilbert-soetanto/" target="_blank" title="Click to view Willbert's Linkedin profile"><i class="icon fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/wilbert-soetanto/" rel="noopener" target="_blank" title="Click to view Willbert's Linkedin profile"><i class="icon fab fa-linkedin"></i></a>
           </figcaption>
         </figure>
       </div>
@@ -115,7 +115,7 @@
         <figure class="img-container text-lg-left text-center my-0">
           <img src="images/team/about-profiles/mark.jpg" class="profile-image img-fluid" alt="Matthew SzeHao Ong's Profile Image" loading="lazy"/>
           <figcaption class="socials">
-            <a href="#" target="_blank" title="Click to view Matthew's Linkedin profile"><i class="icon fab fa-linkedin"></i></a>
+            <a href="#" rel="noopener" target="_blank" title="Click to view Matthew's Linkedin profile"><i class="icon fab fa-linkedin"></i></a>
           </figcaption>
         </figure>
       </div>
@@ -132,7 +132,7 @@
         <figure class="img-container text-lg-left text-center my-0">
           <img src="images/team/about-profiles/justine_chen.jpg" class="profile-image img-fluid" alt="Justine Chen's Profile Image" />
           <figcaption class="socials">
-            <a href="https://www.linkedin.com/in/justine-chen-140803182/" target="_blank" title="Click to view Justine's Linkedin profile">
+            <a href="https://www.linkedin.com/in/justine-chen-140803182/" rel="noopener" target="_blank" title="Click to view Justine's Linkedin profile">
               <i class="icon fab fa-linkedin"></i>
             </a>
           </figcaption>
@@ -143,9 +143,10 @@
       <div class="col-lg-10 mt-4 mt-lg-0" id="justine_chen">
         <h4 class="capitalize">Justine Chen</h4>
         <p>
-          Part of the UI & graphics team at Dreamlink. 
-          Currently a student and this is her first project in UI & graphics design; wants to start a career in UI/UX design. 
-          Also has the cutest puppy which is secretly the 9th member of the team.
+          At Dreamlink Justine leads the UI/UX team and is also a member of the graphics team.
+          She is currently a student studying Commerce (Marketing) and IT (Business information systems). This is her first project in UI & graphics design and her first time learning about and doing 3D modelling, where she taught herself how to use Maya mainly with the help of YouTube. Justine is interested in design and creativity as it allows her imagination to come to life. She is striving towards a career in UI/UX and brand design. 
+          In her spare time Justine likes to shop (window shop :P), try new food & watch movies.
+          She also has the cutest golden retriever puppy (Kirby) which is secretly the 9th member of the team.
         </p>
       </div>
     </div>
@@ -158,7 +159,7 @@
         <figure class="img-container text-lg-left text-center my-0">
           <img src="images/team/about-profiles/summer_chong.jpg" class="profile-image img-fluid" alt="Summer Chong's Profile Image" />
           <figcaption class="socials">
-            <a href="http://www.linkedin.com/in/summer-soktengchong" target="_blank" title="Click to view Summer's Linkedin profile">
+            <a href="http://www.linkedin.com/in/summer-soktengchong" rel="noopener" target="_blank" title="Click to view Summer's Linkedin profile">
               <i class="icon fab fa-linkedin"></i>
             </a>
           </figcaption>
@@ -179,7 +180,7 @@
         <figure class="img-container text-lg-left text-center my-0">
           <img src="images/team/about-profiles/hui_wen_poh.jpg" class="profile-image img-fluid" alt="Hui Wen Poh's Profile Image" />
           <figcaption class="socials">
-            <a href="http://linkedin.com/in/hui-wen-poh-6bb48714b" target="_blank" title="Click to view HW's Linkedin profile">
+            <a href="http://linkedin.com/in/hui-wen-poh-6bb48714b" rel="noopener" target="_blank" title="Click to view HW's Linkedin profile">
               <i class="icon fab fa-linkedin"></i>
             </a>
           </figcaption>
